--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,18 @@ h2 {
 h1 {
   font-size: 36px;
 }
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+.fade-in-button {
+  opacity: 0;
+  animation: fadeIn 1.5s ease-in forwards;
+  animation-delay: 1.5s;
+}
